// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test FilterCRUD component Add a new filter with visibke to Everyone 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="filterCrudForm_name"
                >
                  <label
                    class="Label--main"
                    style="font-size: small; color: white;"
                  >
                    filters.name
                  </label>
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="filters.typeFilterName"
                    type="text"
                    value="filterWithUserOnlyVisibility"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                filters.filterVisibility
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font RadioButton--radioGroup FormikForm--inlineRadioGroup StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibileToOnlyMe
                    </label>
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibleToEveryone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveFilterBtn Button--with-current-color Button--without-shadow"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main cancelBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visibke to Everyone 2`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visible to OnlyMe 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="filterCrudForm_name"
                >
                  <label
                    class="Label--main"
                    style="font-size: small; color: white;"
                  >
                    filters.name
                  </label>
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="filters.typeFilterName"
                    type="text"
                    value="filterWithUserOnlyVisibility"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                filters.filterVisibility
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font RadioButton--radioGroup FormikForm--inlineRadioGroup StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibileToOnlyMe
                    </label>
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibleToEveryone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveFilterBtn Button--with-current-color Button--without-shadow"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main cancelBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visible to OnlyMe 2`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visible to OnlyMe 3`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="filterCrudForm_name"
                >
                  <label
                    class="Label--main"
                    style="font-size: small; color: white;"
                  >
                    filters.name
                  </label>
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="filters.typeFilterName"
                    type="text"
                    value="filterWithUserOnlyVisibility"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                filters.filterVisibility
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font RadioButton--radioGroup FormikForm--inlineRadioGroup StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibileToOnlyMe
                    </label>
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibleToEveryone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveFilterBtn Button--with-current-color Button--without-shadow"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main cancelBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visible to OnlyMe 4`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Add a new filter with visible to OnlyMe 5`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Enable edit mode 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="filterCrudForm_name"
                >
                  <label
                    class="Label--main"
                    style="font-size: small; color: white;"
                  >
                    filters.name
                  </label>
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="filters.typeFilterName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                filters.filterVisibility
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font RadioButton--radioGroup FormikForm--inlineRadioGroup StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibileToOnlyMe
                    </label>
                    <label
                      class="bp3-control bp3-radio RadioButton--radio StyledProps--main"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      filters.visibleToEveryone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveFilterBtn Button--with-current-color Button--without-shadow"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main cancelBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Initial render should match snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
            data-icon="ng-filter"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeFilter Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false Button--with-current-color Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          filters.newFilter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="filters.visibilityTitle"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;
